--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,9 +1,37 @@
 .registerForm,.loginForm{
    width: 40%;
-    margin: 2% auto;
+    margin: 5% auto;
     box-shadow: 2px 2px 10px gray;
     padding: 2%;
 }
 .row{
     margin-bottom: 0px;
 }
+
+img{
+    width: 35%;
+}
+
+.fc{
+    margin-top: 2%;
+    width: 75%; 
+    margin-left: 10%;
+
+}
+ul{
+    display: flex
+}
+
+ul Link{
+    justify-content: flex-end;
+}
+
+/* body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  } */
