--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,8 +1,16 @@
-.registerForm,.loginForm{
-   width: 40%;
+.registerForm,.loginForm,.eventForm{
+    width: 40%;
     margin: 5% auto;
     box-shadow: 2px 2px 10px gray;
     padding: 2%;
+    background-color:whitesmoke;
+}
+
+.eventForm{
+    border-radius: 5%;
+    position: fixed;
+    top: 10%;
+    left: 30%; 
 }
 .row{
     margin-bottom: 0px;
@@ -14,24 +22,130 @@ img{
 
 .fc{
     margin-top: 2%;
-    width: 75%; 
-    margin-left: 10%;
-
+    width: 65%; 
+    margin-left: 20%;
 }
 ul{
     display: flex
+}
+
+ul li a {
+    flex-direction: column;
 }
 
 ul Link{
     justify-content: flex-end;
 }
 
-/* body {
+body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+} 
+
+.pic img{
+    margin-top: 3%;
+    border-radius: 50%;
+    width: 15%;
+}
+
+.dropdown-content {
+    margin-top: 4%;
+    flex-direction: column;
+}
+a.dropdown-button{
+    width: 300px;
+}
+
+  .loader {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    width: 175px;
+    height: 100px;
   }
 
-  main {
-    flex: 1 0 auto;
-  } */
+  .loader span {
+    display: block;
+    background: #ccc;
+    width: 7px;
+    height: 10%;
+    border-radius: 14px;
+    margin-right: 5px;
+    float: left;
+    margin-top: 25%;
+  }
+  .loader span:last-child {
+    margin-right: 0px;
+  }
+  .loader span:nth-child(1) {
+    animation: load 2.5s 1.4s infinite linear;
+  }
+  .loader span:nth-child(2) {
+    animation: load 2.5s 1.2s infinite linear;
+  }
+  .loader span:nth-child(3) {
+    animation: load 2.5s 1s infinite linear;
+  }
+  .loader span:nth-child(4) {
+    animation: load 2.5s 0.8s infinite linear;
+  }
+  .loader span:nth-child(5) {
+    animation: load 2.5s 0.6s infinite linear;
+  }
+  .loader span:nth-child(6) {
+    animation: load 2.5s 0.4s infinite linear;
+  }
+  .loader span:nth-child(7) {
+    animation: load 2.5s 0.2s infinite linear;
+  }
+  .loader span:nth-child(8) {
+    animation: load 2.5s 0s infinite linear;
+  }
+  .loader span:nth-child(9) {
+    animation: load 2.5s 0.2s infinite linear;
+  }
+  .loader span:nth-child(10) {
+    animation: load 2.5s 0.4s infinite linear;
+  }
+  .loader span:nth-child(11) {
+    animation: load 2.5s 0.6s infinite linear;
+  }
+  .loader span:nth-child(12) {
+    animation: load 2.5s 0.8s infinite linear;
+  }
+  .loader span:nth-child(13) {
+    animation: load 2.5s 1s infinite linear;
+  }
+  .loader span:nth-child(14) {
+    animation: load 2.5s 1.2s infinite linear;
+  }
+  .loader span:nth-child(15) {
+    animation: load 2.5s 1.4s infinite linear;
+  }
+  
+  @keyframes load {
+    0% {
+      background: #ccc;
+      margin-top: 25%;
+      height: 10%;
+    }
+    50% {
+      background: #444;
+      height: 100%;
+      margin-top: 0%;
+    }
+    100% {
+      background: #ccc;
+      height: 10%;
+      margin-top: 25%;
+    }
+  }
+  
