--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
 body {
+  display: flex;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  flex-direction: column;
+  min-height: 100vh;
 }
